docs/tests/parser/expressions/invalid/ExprCallTrailingComma.b
fn void test() {
    foo(1, 2,);
}
